[gd_scene load_steps=14 format=3 uid="uid://cqlu7jev3rhwo"]

[ext_resource type="Script" path="res://scn/totp_box/totp_box.gd" id="1_mv1jd"]
[ext_resource type="Texture2D" uid="uid://cd3xqum47qec5" path="res://assets/img/circular_progress/back.png" id="2_bx236"]
[ext_resource type="Texture2D" uid="uid://cfdegujy0b61m" path="res://assets/img/circular_progress/progress.png" id="3_n3ivc"]
[ext_resource type="PackedScene" uid="uid://dxpt4bpwl6ktn" path="res://scn/components/VisibilityBtn.tscn" id="5_llej7"]
[ext_resource type="Texture2D" uid="uid://elj8q0edrdc1" path="res://assets/img/icons/google-icons/copy/1x/baseline_content_copy_white_24dp.png" id="7_gltfv"]
[ext_resource type="StyleBox" uid="uid://bb8p7t0x5qhla" path="res://assets/styles/button/normal.tres" id="7_kk0f8"]
[ext_resource type="StyleBox" uid="uid://dhq6nbnj4lv7e" path="res://assets/styles/button/hover_2.tres" id="8_uea1m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ft3x"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.184314, 0.192157, 0.211765, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
anti_aliasing_size = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_rui6b"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_k55am"]
font_color = Color(0.627451, 0.627451, 0.627451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u5dem"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25vx8"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0.12549, 0.133333, 0.145098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_ibumk"]
line_spacing = 0.0
font_size = 30

[node name="TOTPBoxContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ft3x")
script = ExtResource("1_mv1jd")

[node name="TOTPBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15
metadata/_edit_use_anchors_ = true

[node name="HeaderBox" type="HBoxContainer" parent="TOTPBox"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="IssuerLogo" type="TextureRect" parent="TOTPBox/HeaderBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_vertical = 4
stretch_mode = 5

[node name="AccountBox" type="VBoxContainer" parent="TOTPBox/HeaderBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1

[node name="IssuerLbl" type="Label" parent="TOTPBox/HeaderBox/AccountBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Issuer"
label_settings = SubResource("LabelSettings_rui6b")
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="UserLbl" type="Label" parent="TOTPBox/HeaderBox/AccountBox"]
unique_name_in_owner = true
layout_mode = 2
text = "user@email.test"
label_settings = SubResource("LabelSettings_k55am")
clip_text = true
text_overrun_behavior = 1

[node name="SecsRemaining" type="TextureProgressBar" parent="TOTPBox/HeaderBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 30.0
value = 15.0
fill_mode = 4
nine_patch_stretch = true
stretch_margin_left = 80
stretch_margin_top = 80
texture_under = ExtResource("2_bx236")
texture_progress = ExtResource("3_n3ivc")
tint_under = Color(0.12549, 0.133333, 0.145098, 1)
tint_progress = Color(0, 0.768627, 0.45098, 1)

[node name="Label" type="Label" parent="TOTPBox/HeaderBox/SecsRemaining"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_u5dem")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BodyBox" type="HBoxContainer" parent="TOTPBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VisibilityBtn" parent="TOTPBox/BodyBox" instance=ExtResource("5_llej7")]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_styles/hover_pressed = ExtResource("8_uea1m")

[node name="TOTPDigits" type="HBoxContainer" parent="TOTPBox/BodyBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="1" type="Label" parent="TOTPBox/BodyBox/TOTPDigits"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "0"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Label" parent="TOTPBox/BodyBox/TOTPDigits"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "0"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Label" parent="TOTPBox/BodyBox/TOTPDigits"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "0"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="Label" parent="TOTPBox/BodyBox/TOTPDigits"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "0"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="5" type="Label" parent="TOTPBox/BodyBox/TOTPDigits"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "0"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="6" type="Label" parent="TOTPBox/BodyBox/TOTPDigits"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "0"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TOTPDigitsHidden" type="HBoxContainer" parent="TOTPBox/BodyBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="1" type="Label" parent="TOTPBox/BodyBox/TOTPDigitsHidden"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "*"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Label" parent="TOTPBox/BodyBox/TOTPDigitsHidden"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "*"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Label" parent="TOTPBox/BodyBox/TOTPDigitsHidden"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "*"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="Label" parent="TOTPBox/BodyBox/TOTPDigitsHidden"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "*"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="5" type="Label" parent="TOTPBox/BodyBox/TOTPDigitsHidden"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "*"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="6" type="Label" parent="TOTPBox/BodyBox/TOTPDigitsHidden"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_25vx8")
text = "*"
label_settings = SubResource("LabelSettings_ibumk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyBtn" type="Button" parent="TOTPBox/BodyBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Copy this code"
theme_override_styles/normal = ExtResource("7_kk0f8")
theme_override_styles/hover = ExtResource("8_uea1m")
icon = ExtResource("7_gltfv")
icon_alignment = 1

[node name="Timer" type="Timer" parent="TOTPBox"]
unique_name_in_owner = true
autostart = true

[connection signal="toggled" from="TOTPBox/BodyBox/VisibilityBtn" to="." method="_on_visibility_btn_toggled"]
[connection signal="pressed" from="TOTPBox/BodyBox/CopyBtn" to="." method="_on_copy_btn_pressed"]
